assets/css/main.css
/* ... */
			.poptrox-popup .closer:before {
				-moz-transition: background-color 0.5s ease-in-out;
				-webkit-transition: background-color 0.5s ease-in-out;
				-ms-transition: background-color 0.5s ease-in-out;
				transition: background-color 0.5s ease-in-out;
				content: '';
				display: block;
				position: absolute;
				right: 16px;
				top: 16px;
				width: 40px;
				height: 40px;
				border-radius: 100%;
				box-shadow: inset 0 0 0 1px #fff;
				background: rgba(255, 255, 255, 0.1) url("images/poptrox-closer.svg") center center;
				color: #fff !important;
			}

		.poptrox-popup:hover .closer {
			opacity: 0.5;
		}

			.poptrox-popup:hover .closer:hover {
				opacity: 1.0;
			}

/* FAQ */

	#faq ul {
		margin-top: 2em;
	}

	#faq li {
		list-style: none;
		margin-top: 1em;
	}

	#faq li b {
		font-weight: bold;
		margin-bottom: 0.5em;
		font-size: 1.25em;
		display: block;
	}

/* Speakers */

#speakers li {
	overflow: auto;
	margin-top: 2em;
}

#speakers li img {
	width: 20%;
	float: left;
	display: block;
}

#speakers li .info {
	width: 80%;
	float: left;
	display: block;
	padding-left: 1.5em;
}

#speakers li .info .name {
	font-size: 1.5em;
	font-family: 'caviar', sans-serif;
	text-transform: uppercase;
	margin-bottom: 0.5rem;
}

#speakers li .info .bio {
	font-size: 1rem;
	line-height: 1.5;
}

#schedule header h3 {
	display: block;
	width: 100%;
}

#panel.panel {
	width: 100%;
}

#panel.panel header h3 {
	margin-top: 2em;
}

#panel.panel header p {
	display: none;
}

#panel.panel {
	margin-bottom: 2em;
	display: block;
	overflow: auto;
}

#panel.panel li {
	width: 20%;
	float: left;
	display: block;
	margin-top: 1em;
}

#panel.panel li img {
	width: 100%;
	padding-left: 0.5em;
	padding-right: 0.5em
}

#panel.panel li .info {
	padding-left: 0;
	margin-left: 0;
	width: 100%;
}

#panel.panel li .info .name {
	font-size: 0.8em;
	text-align: center;
	display: block;
	word-spacing: 10em;
	line-height: 1.5em;
	margin-top: 0.5em;
	margin-bottom: 0;
}

#panel.panel li .info .company {
	display: block;
	width: 100%;
	text-align: center;
	font-size: 0.7em;
	margin-top: -0.25em;
}

#panel.panel li .bio {
	display: none;
}

#panel.panel li:first-child img {
	padding-left: 0;
	padding-right: 1em;
}

#panel.panel li:first-child .name,
#panel.panel li:first-child .company {
	padding-right: 1em;
}

#panel.panel li:last-child img{
	padding-left: 1em;
	padding-right: 0;
}

#panel.panel li:last-child .name,
#panel.panel li:last-child .company {
	padding-left: 1em;
}

/* Wide */

	@media screen and (max-width: 1680px) {

		/* Basic */

			body, input, textarea, select {
				font-size: 16pt;
			}

	}

/* Normal */

	@media screen and (max-width: 1080px) {

		/* Banner */

			#banner {
				padding: 4em 0 4em 0;
				background-size: auto, 175% auto;
			}

	}

/* Narrow */

	@media screen and (max-width: 840px) {

		/* Basic */

			body {
				background-color: #5280BA;
				background-image: url("images/overlay.png"), url("../../images/bg-alt.jpg");
				background-repeat: repeat, no-repeat;
				background-size: auto, 100% auto;
				background-position: top left, top center;
				background-attachment: scroll, scroll;
				font-size: 14pt;
			}

			input, textarea, select {
				font-size: 14pt;
			}

			h1, h2, h3, h4, h5, h6 {
				line-height: 1.5em;
			}

			header p {
				margin: 0.25em 0 0 0;
				padding: 0 0 0.5em 0;
			}

			#nav li.not-mob {
				display: none;
			}

		/* Box */

			.box {
				position: relative;
			}

				.box section {
					margin: 0 0 2em 0;
				}

				.box.style1 {
					padding: 2.5em 2em 2.5em 2em;
				}

					.box.style1.right .inner {
						padding-left: 2em;
					}

					.box.style1.left .inner {
						padding-right: 2em;
					}

				.box.style2 header {
					padding: 0em;
				}

				.box.style2 .inner {
					position: relative;
					padding: 30px 0 0 0;
				}

				.box.style3 {
					padding: 2.5em 2em 2.5em 2em;
				}

		/* Header */

			#header img {
				width: 100%;
			}

		/* Banner */

			#banner {
				padding: 3.5em;
				background-size: 200% auto;
			}

				#banner br {
					display: none;
				}
		
		/* Mobile */

			#speakers {
				overflow: auto;
			}

			#speakers li {
				width: 33.334%;
				float: left;
				padding-left: 0.5em;
				padding-right: 0.5em;
			}

			#speakers li img {
				width: 100%;
			}

			#speakers li .info {
				width: 100%;
				padding-left: 0;
				text-align: center;
			}

			#speakers li .info .name {
				font-size: 1rem;
				margin-top: 1rem;
			}

			#speakers li .bio {
				display: none;
			}

	}
/* ... */

